--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>Help</h1>
+    <h1>{{title}}</h1>
+    <img src="img/Eric-55.jpeg">
+    <p>Created by {{name}}</p>
 </body>
 
 </html>
