--- a/views/help.hbs
+++ b/views/help.hbs
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>About</h1>
-    <img src="img/Eric-55.jpeg">
+    <h1>Help</h1>
+    <p>{{helpText}}</p>
 </body>
 
 </html>
