--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
-    <img src="img/Eric-55.jpeg">
-    <p>Created by {{name}}</p>
+    {{>header}}
+    {{>footer}}
 </body>
 
 </html>
