--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1>Help</h1>
-    <p>{{helpText}}</p>
+    {{>header}}
+    <img src="img/Eric-55.jpeg">
+    {{>footer}}
 </body>
 
 </html>
