--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,13 +3,18 @@
 <html>
 
 <head>
+    <title>About</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
 </head>
 
 <body>
-    {{>header}}
-    <img src="img/Eric-55.jpeg">
+
+    <div class="main-content">
+        {{>header}}
+        <img class="portrait" src="img/Eric-55.jpeg">
+    </div>
+
     {{>footer}}
 </body>
 
