--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Eric Brooks. It uses data from weatherstack.com and mapbox.com!</p>
         <img class="portrait" src="img/Eric-55.jpeg">
     </div>
 
